2000-09-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-header-xref): New function.
	(nnshimbun-insert-header): Use `nnshimbun-header-xref', instead of
	`mail-header-xref'.
	(nnshimbun-make-mhonarc-contents): Took a measure against
	unexpected TAB characters.

2000-09-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Add `netbsd' support.
	(nnshimbun-nov-fix-header): Change a form storing Message-Id.
	(nnshimbun-search-id): Ditto.
	(nnshimbun-make-mhonarc-contents): Use optional header
	information.

2000-09-05   Daiki Ueno  <ueno@unixuser.org>

	* lisp/pop3.el (pop3-quit): Don't clear `pop3-uidl-obarray'.
	(pop3-save-uidls): Clear `pop3-uidl-obarray' here.

2000-09-04   Daiki Ueno  <ueno@unixuser.org>

	* lisp/mail-source.el (pop3-leave-mail-on-server): Declare.
	(mail-source-keyword-map): New keyword `:leave' for pop.
	(mail-source-fetch-pop): Refer it.

	* lisp/pop3.el (pop3-ssl-program-name): New variable.

2000-08-29  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-zdnet-get-headers): Follow changes
	of ZDNet.

2000-08-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

2000-08-25  Yagi Tatsuya  <yagi@is.titech.ac.jp>
            Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-list-options, nntp-options-subscribe,
	nntp-options-not-subscribe): New server variables.
	(nntp-request-list): Use them.
	* texi/gnus.texi, texi/gnus-ja.texi: Update for them.

2000-08-23  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-group-startup-message): Use `image-size' to
	simplify the program.

	* lisp/gnus-group.el (gnus-group-rename-group): Inhibit renaming of
	zombie or killed groups.

2000-08-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow changes of
	ZDNet.
	(nnshimbun-make-text-or-html-contents): Ditto.