@@ -1,3 +1,8 @@
+2000-09-07  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>
+
+	* lisp/smiley.el (smiley-buffer, smiley-create-glyph): Work with
+	GTK XEmacs as well.
+
 2000-09-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* lisp/nnshimbun.el (nnshimbun-header-xref): New function.
